# isi-dev-server

./: .commitlintrc.yml  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  schema.sql
doc/: curl.md  tree.md
init-scripts/: init.sql
src/: db.rs  error.rs  lib.rs  main.rs  routes.rs  utils.rs
src/application/repository/: coupon_in_memory_repository.rs  coupon_postgres_repository.rs  discount_in_memory_repository.rs  discount_postgres_repository.rs  mod.rs  product_in_memory_repository.rs  product_postgres_repository.rs
src/application/usecase/: mod.rs  patch_operation.rs
src/domain/: mod.rs
src/domain/entity/: coupon.rs  coupon_entity.rs  discount_entity.rs  mod.rs  product_entity.rs
src/domain/repository/: coupon_repository.rs  discount_repository.rs  mod.rs  product_repository.rs
src/domain/usecase/coupon/: create_coupon_usecase.rs  delete_coupon_usecase.rs  get_coupon_usecase.rs  get_coupons_usecase.rs  mod.rs  update_coupon_usecase.rs
src/domain/usecase/discount/: apply_coupon_discount_usecase.rs  apply_percent_discount_usecase.rs  mod.rs  remove_discount_usecase.rs
src/domain/usecase/product/: create_product_usecase.rs  delete_product_usecase.rs  get_all_product_usecase.rs  get_product_usecase.rs  mod.rs  restore_product_usecase.rs  update_product_usecase.rs
src/domain/utils/: coupon_value_validate.rs  mod.rs  normalize_name.rs  statics.rs
src/frameworks/: mod.rs
src/frameworks/adapter/: axum.rs  mod.rs
src/frameworks/axum/: server.rs
src/frameworks/axum/handler/: mod.rs
src/frameworks/sqlx/: mod.rs  pool.rs  run_schema.rs
src/handlers/: coupon.rs  mod.rs  product.rs
src/interfaces/controller/coupon/: create_coupon_controller.rs  delete_coupon_controller.rs  get_coupon_controller.rs  mod.rs  (+2 more)
src/interfaces/handler/: generic_handler.rs  mod.rs
src/models/: discount.rs  product.rs
tests/integration_tests/: mod.rs
tests/integration_tests/coupon_tests/: create_coupon_test.rs  delete_coupon_test.rs  get_coupon_test.rs  mod.rs  update_coupon_test.rs
tests/integration_tests/product_tests/: create_product_test.rs  delete_product_test.rs  get_product_test.rs  health_check_test.rs  mod.rs  update_product_test.rs
tests/utils/: mod.rs  start_server.rs
(+28 files in other folders)
