[package]
name = "marcelo_rocha_desafio_fullstack"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.16", features = ["derive"] }
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }
tokio-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-uuid-1",
] }
lazy_static = "1.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
thiserror = "1.0"
deadpool = { version = "0.12.2", features = ["serde"] }
cargo-husky = { version = "1.5.0", features = ["precommit-hook"] }

[build-dependencies]
dotenv = "0.15"
